# reef

./: README.md  pyproject.toml
alphacumen/: README.md  __init__.py  _build_pipeline_json.py  _langfuse.py  capabilities.py  index_map.py  memo.py  pipeline.json  postprocessor.py  roster.py  skill_registry.py  skills.py  swarm.py  tools.py  vc-judge.ts
alphacumen-finance-benchmarks/: README.md
alphacumen-finance-benchmarks/examples/: ask_alphacumen.py
alphacumen/evals/: README.md  __init__.py
alphacumen/evals/common/: __init__.py  cli.py  config.py  judge.py  runner.py  util.py
alphacumen/evals/financebench/: README.md  __init__.py  eval_one.py
alphacumen/evals/valsai/: README.md  eval_one.py
alphacumen/examples/: ask_alphacumen.py  ask_hosted_alphacumen.py
alphacumen/planner/: __init__.py  _variant_planner.py  _variant_postprocessor.py
alphacumen/planner_skills/: acquisition_strategy.md  beat_or_miss_routing.md  cashflow_continuing_ops.md  dedicated_specialist_dispatch.md  explicit_ticker_engagement.md  filing_enumeration.md  fiscal_period_resolution.md  foreign_private_issuer.md  forward_looking_anchor.md  guidance_enumeration.md  implied_fy_runrate.md  inventory_turnover.md  ipo_private_placement.md  marketplace_revenue_decomposition.md  monthly_seasonal_forecast.md  multi_issuer_serial.md  multi_item_extraction.md  news_priming_narrative_qualitative.md  news_quant_query_spec.md  precision_preservation.md  regulatory_risk.md  reported_metric_fan.md  revenue_disaggregation_customers.md  sec_form_routing.md  single_figure_contradiction.md  temporal_ceiling.md  ticker_screen.md  vendor_concentration.md
alphacumen/prompts/: __init__.py  base.md  base_backtest.md  planner_seed.md  postprocessor.md  specialist_grok.md  specialist_news_quant.md  specialist_risk.md  specialist_sector_seed.md  specialist_stock.md  specialist_vc.md
alphacumen/skills/: accounting_policy_change.md  bank_tbvps_recovery.md  competitive_landscape_structural.md  cover_page_share_counts.md  disaggregated_breakdown_notes.md  event_listing.md  ex99_exhibits_walker.md  executive_compensation.md  financial_ratio_formulas.md  legal_proceedings_enumeration.md  ma_multi_component.md  microcap_momentum_screen.md  multi_quarter_beat_miss.md  registered_securities_listing.md  saas_risk_factors.md  segment_min_max_comparison.md  vote_results_8k_edgar.md
alphacumen/skills/compute_competitive_trajectory/: SKILL.md  impl.py
alphacumen/skills/compute_debt_refi_impact/: SKILL.md  impl.py
alphacumen/skills/compute_eps_guidance_dollar_range/: SKILL.md  impl.py
alphacumen/skills/compute_fcf_margin_trend/: SKILL.md  impl.py
alphacumen/skills/compute_fy_capex_guidance_multi/: SKILL.md  impl.py
alphacumen/skills/compute_intangible_impairments_by_asset/: SKILL.md  impl.py
alphacumen/skills/compute_issuer_ratios/: SKILL.md  impl.py
alphacumen/skills/compute_kpi_subperiod_trend/: SKILL.md  impl.py
alphacumen/skills/compute_lease_adjusted_ebitdar/: SKILL.md  impl.py
alphacumen/skills/compute_note_diff_across_years/: SKILL.md  impl.py
alphacumen/skills/compute_restructuring_plan_flowthrough/: SKILL.md  impl.py
alphacumen/skills/compute_revenue_decomposition_take_rate/: SKILL.md  impl.py
alphacumen/skills/decompose_gross_margin_change/: SKILL.md  impl.py
alphacumen/skills/extract_accounting_estimate_change_disclosure/: SKILL.md  impl.py
alphacumen/skills/extract_competition_section/: SKILL.md  impl.py
alphacumen/skills/extract_ebitda_reconciliation_multi_year/: SKILL.md  impl.py
alphacumen/skills/extract_item1_human_capital_headcount/: SKILL.md  impl.py
alphacumen/skills/extract_loyalty_program_metrics/: SKILL.md  impl.py
alphacumen/skills/extract_ma_deal_terms/: SKILL.md  impl.py
alphacumen/skills/extract_operating_kpi_table/: SKILL.md  impl.py
alphacumen/skills/extract_restated_adj_ebitda_continuing_ops/: SKILL.md  impl.py
alphacumen/skills/format_guidance_comparison/: SKILL.md  impl.py
alphacumen/skills/monthly_seasonal_forecast/: SKILL.md  impl.py
alphacumen/tests/: conftest.py  test_backtest_prompts.py  test_capabilities.py  test_harness_constraints.py  test_react.py  test_swarm.py  test_tools.py
auto-research/: README.md  pyproject.toml
auto-research/examples/toy_sweep/: run.py  spec.yaml
auto-research/lib/: gpu.py  hf_hub.py  progress.py
auto-research/queue/: cbq.py  publish_cw_metrics.py  publish_workers_snapshot.py
auto-research/runner/: architect-loadtest.service  architect_code_task.sh  architect_up.sh  architect_watcher.sh  finalize_completed.sh  loadtest_coder_lane.sh  publish_slots.sh  smoke_and_launch.sh  suggest_experiment.sh  worker.service  worker_shift.sh  worker_watcher.sh
claude-code-token-xray/: README.md  backup_config.example.json  backup_sessions.py  cost.py  main_vs_sidecar.py  reread_breakdown.py  token_time_breakdown.py
harness/: README.md  __init__.py  _langfuse.py  constraints.py  context.py  decorators.py  enforcement.py  llm.py  react.py  skill_fn.py  skill_tools.py  skills_loader.py  tool.py
harness/stubs/: __init__.py  py_executor.py  tools.py
investment_analyst/: benchmark_queries_50.md
investment_analyst/examples/: ask_alphacumen.py
polyp/: README.md  pyproject.toml
polyp/examples/toy_sweep/: README.md  spec.yaml
polyp/lib/: __init__.py  progress.py
polyp/queue/: publish_queue_snapshot.py  schema.sql
polyp/runner/: README.md  __init__.py  architect.service  architect_analyze_task.py  architect_analyze_task.sh  architect_code_task.py  architect_code_task.sh  architect_watcher.py  architect_watcher.sh  common.py  migrate_watcher_to_systemd.sh  suggest_experiment.py  suggest_experiment.sh  worker_reconcile.py  worker_reconcile.sh  worker_shift.py  worker_shift.sh  worker_up.sh  worker_watcher.py  worker_watcher.sh
reef/: README.md  __init__.py  _langfuse.py  constraints.py  context.py  decorators.py  enforcement.py  llm.py  progress.py  react.py  skill_fn.py  skill_tools.py  skills_loader.py  tool.py
reef/agents/: __init__.py  headless_claude.py
reef/stubs/: __init__.py  py_executor.py  tools.py
(+28 files in other folders)
