[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cb-ia"
version = "0.0.587"
description = "Coral harness framework + AlphaCumen finance instance"
requires-python = ">=3.11"
authors = [{ name = "Coral Bricks AI" }]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Direct-provider LLM client (replaces the gateway-side proxy).
    # The chat() function in harness/llm.py uses the openai SDK for
    # OpenAI-compatible providers (Lilac, Together, OpenRouter, Cerebras,
    # DeepInfra), the anthropic SDK for direct Anthropic, and boto3 for
    # Bedrock. Install at least one to call models.
    "openai>=1.0",
    "anthropic>=0.30",
    "boto3>=1.34",
    # Langfuse for run-level tracing. Observations emit from
    # ``alphacumen._langfuse`` and flush via ``atexit``. No-op without
    # LANGFUSE_PUBLIC_KEY / LANGFUSE_SECRET_KEY in env.
    "langfuse>=3.0,<4",
    # BeautifulSoup for ``extract_filing_tables`` -- parses raw filing
    # HTML returned by sec-api's Extractor into matchable ``<table>``
    # elements. ``html.parser`` (stdlib) is the default backend.
    "beautifulsoup4>=4.12,<5",
]

[project.urls]
Homepage = "https://github.com/Coral-Bricks-AI/coral-ai"
Blog = "https://coralbricks.ai/blog/write-your-own-harness"

# Flat package layout: harness/ and alphacumen/ are both top-level
# importable packages bundled together in the cb-ia wheel.
# - alphacumen.tools is a single MODULE (alphacumen/tools.py), not a package
# - alphacumen/planner_skills/ and alphacumen/skills/ are data dirs with
#   no __init__.py — markdown playbooks + per-skill impl.py files that the
#   skills loader pulls via importlib.util.spec_from_file_location. Both
#   ship as package-data of the alphacumen package.
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*", "alphacumen", "alphacumen.planner", "alphacumen.prompts"]

[tool.setuptools.package-data]
"alphacumen.prompts" = ["*.md"]
alphacumen = [
    "pipeline.json",
    "planner_skills/*.md",
    "skills/*.md",
    "skills/*/SKILL.md",
    "skills/*/impl.py",
    "skills/*/__init__.py",
]

[tool.coralbricks.pipeline]
# Entrypoint the gateway resolves when serving cb-ia runs.
entrypoint = "alphacumen.swarm:run"
