[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coral-auto-research"
version = "0.1.0"
description = "Architect / Worker / Analyzer / Auto-suggester agent loop over a Postgres-backed experiment queue"
requires-python = ">=3.11"
authors = [{ name = "Coral Bricks AI" }]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]

[project.scripts]
cbq = "auto_research.queue.cbq:main"

[project.urls]
Homepage = "https://github.com/Coral-Bricks-AI/coral-ai"
Source = "https://github.com/Coral-Bricks-AI/coral-ai/tree/main/auto-research"
