[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyp"
version = "0.1.0"
description = "Polyp — Architect / Worker / Analyzer / Auto-suggester agent loop over a Postgres-backed experiment queue. The atomic research unit that, over time, builds a reef of knowledge."
requires-python = ">=3.11"
authors = [{ name = "Coral Bricks AI" }]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]

# No console_scripts entry: directory layout uses flat `queue/` which collides
# with the stdlib `queue` module. Invoke the CLI directly:
#   python polyp/queue/cbq.py --help
# or `alias cbq='python /path/to/polyp/queue/cbq.py'` in your shell rc.

[project.urls]
Homepage = "https://github.com/Coral-Bricks-AI/coral-ai"
Source = "https://github.com/Coral-Bricks-AI/coral-ai/tree/main/polyp"
